--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "aws s3 sync build/ s3://hackethon-poc --acl public-read"
+    "deploy": "aws s3 sync build/ s3://onboarding-portal-iris --acl public-read"
   },
   "eslintConfig": {
     "extends": [
